/******************************************************************************
 *                                                                            *
 *                    Copyright 2016 Subterranean Security                    *
 *                                                                            *
 *  Licensed under the Apache License, Version 2.0 (the "License");           *
 *  you may not use this file except in compliance with the License.          *
 *  You may obtain a copy of the License at                                   *
 *                                                                            *
 *      http://www.apache.org/licenses/LICENSE-2.0                            *
 *                                                                            *
 *  Unless required by applicable law or agreed to in writing, software       *
 *  distributed under the License is distributed on an "AS IS" BASIS,         *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  *
 *  See the License for the specific language governing permissions and       *
 *  limitations under the License.                                            *
 *                                                                            *
 *****************************************************************************/
syntax = "proto3";

package net;
option java_package = "com.sandpolis.core.proto.net";

import "com/sandpolis/core/proto/net/MC_Auth.proto";
import "com/sandpolis/core/proto/net/MC_Client.proto";
import "com/sandpolis/core/proto/net/MC_Cvid.proto";
import "com/sandpolis/core/proto/net/MC_Delta.proto";
import "com/sandpolis/core/proto/net/MC_Generator.proto";
import "com/sandpolis/core/proto/net/MC_Group.proto";
import "com/sandpolis/core/proto/net/MC_Listener.proto";
import "com/sandpolis/core/proto/net/MC_Login.proto";
import "com/sandpolis/core/proto/net/MC_Network.proto";
import "com/sandpolis/core/proto/net/MC_Ping.proto";
import "com/sandpolis/core/proto/net/MC_Plugin.proto";
import "com/sandpolis/core/proto/net/MC_Server.proto";
import "com/sandpolis/core/proto/net/MC_Stream.proto";
import "com/sandpolis/core/proto/net/MC_User.proto";
import "com/sandpolis/core/proto/util/Result.proto";

import "google/protobuf/any.proto";

/**
 * A message type for typical communication among instances.
 *
 * Message prefixes:
 *  RQ_*    Request message
 *  RS_*    Response message
 *  EV_*    Asynchronous event
 *  
 * Message category naming conventions:
 *  MC_*    Message category
*/
message Message {

    // The final destination CVID
    int32 to = 1;
    
    // The original source CVID
    int32 from = 2;

    // The response ID
    int32 id = 3;

    oneof msg_oneof {

        // A plugin message
        google.protobuf.Any            plugin                         = 4;
        
        // Stream data
        EV_StreamData                  ev_stream_data                 = 5;
        
        // A generic response indicating the outcome of some operation
        util.Outcome                   rs_outcome                     = 6;
        
        // MC_Auth
        RQ_NoAuth                      rq_no_auth                     = 7;
        RQ_PasswordAuth                rq_password_auth               = 8;
        RQ_KeyAuth                     rq_key_auth                    = 9;

        // MC_Cvid
        RQ_Cvid                        rq_cvid                        = 100;
        RS_Cvid                        rs_cvid                        = 101;
        
        // MC_Debug

        // MC_Delta
        RQ_ProfileDelta                rq_profile_delta               = 10;
        RS_ProfileDelta                rs_profile_delta               = 1010;
        EV_ProfileDelta                ev_profile_delta               = 11;
        EV_PermissionDelta             ev_permission_delta            = 12;

        // MC_Generator
        RQ_Generate                    rq_generate                    = 13;
        RS_Generate                    rs_generate                    = 1013;
        
        // MC_Group
        RQ_AddGroup                    rq_add_group                   = 14;
        RQ_RemoveGroup                 rq_remove_group                = 15;
        RQ_ListGroups                  rq_list_groups                 = 16;
        RS_ListGroups                  rs_list_groups                 = 1016;
        RQ_GroupDelta                  rq_group_delta                 = 17;

        // MC_Listener
        RQ_AddListener                 rq_add_listener                = 18;
        RQ_RemoveListener              rq_remove_listener             = 19;
        RQ_ListenerDelta               rq_listener_delta              = 20;
        RQ_ChangeListener              rq_change_listener             = 21;
        
        // MC_Login
        RQ_Login                       rq_login                       = 22;
        RQ_Logout                      rq_logout                      = 1022;
        
        // MC_Network
        EV_EndpointClosed              ev_endpoint_closed             = 23;
        EV_NetworkDelta                ev_network_delta               = 24;
        RQ_DirectConnection            rq_direct_connection           = 25;
        RS_DirectConnection            rs_direct_connection           = 1025;
        RQ_Connection                  rq_connection                  = 26;
        
        // MC_Ping
        RQ_Ping                        rq_ping                        = 27;
        RS_Ping                        rs_ping                        = 1027;
        
        // MC_Plugin
        RQ_ArtifactDownload            rq_artifact_download           = 28;
        RS_ArtifactDownload            rs_artifact_download           = 1028;
        RQ_PluginInstall               rq_plugin_install              = 29;
        RQ_PluginList                  rq_plugin_list                 = 30;
        RS_PluginList                  rs_plugin_list                 = 1030;

        // MC_Server
        RQ_ServerBanner                rq_server_banner               = 31;
        RS_ServerBanner                rs_server_banner               = 1031;
        
        // MC_Stream
        RQ_StreamStart                 rq_stream_start                = 32;
        RS_StreamStart                 rs_stream_start                = 1032;
        RQ_StreamStop                  rq_stream_stop                 = 33;
        
        // MC_User
        RQ_AddUser                     rq_add_user                    = 34;
        RQ_RemoveUser                  rq_remove_user                 = 35;
        RQ_UserDelta                   rq_user_delta                  = 36;
        
        // MC_Client
        RQ_ClientMetadata              rq_client_metadata             = 37;
        RS_ClientMetadata              rs_client_metadata             = 1037;
        RQ_PowerChange                 rq_power_change                = 38;

    }
}