//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package plugin.desktop;

import "com/sandpolis/plugin/desktop/msg_clipboard.proto";
import "com/sandpolis/plugin/desktop/msg_desktop.proto";
import "com/sandpolis/plugin/desktop/msg_rd.proto";

option java_package = "com.sandpolis.plugin.desktop";

message DesktopMSG {
    oneof payload {

        // msg_desktop
        RQ_Screenshot                   rq_screenshot                   =    1;
        RS_Screenshot                   rs_screenshot                   = 1001;

        // msg_rd
        RQ_DesktopStream                rq_desktop_stream               =    2;
        EV_DesktopStream                ev_desktop_stream               =    3;

        // msg_clipboard
        EV_ClipboardStream              ev_clipboard_stream             =    4;
    }
}
