//============================================================================//
//                                                                            //
//                Copyright Â© 2015 - 2020 Subterranean Security               //
//                                                                            //
//  This source file is subject to the terms of the Mozilla Public License    //
//  version 2. You may not use this file except in compliance with the MPL    //
//  as published by the Mozilla Foundation at:                                //
//                                                                            //
//    https://mozilla.org/MPL/2.0                                             //
//                                                                            //
//=========================================================S A N D P O L I S==//
syntax = "proto3";

package plugin.filesys;

import "com/sandpolis/plugin/filesys/msg_filesys.proto";

option java_package = "com.sandpolis.plugin.filesys";

message FilesysMSG {
    oneof payload {

        // msg_filesys
        RQ_FileListing                  rq_file_listing                 =    1;
        RS_FileListing                  rs_file_listing                 = 1001;
        RQ_FileDelete                   rq_file_delete                  =    2;
    }
}
